--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
+    "@mui/system": "^5.16.7",
     "apexcharts": "^3.43.0",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
@@ -38,7 +39,8 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.4.0",
