--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
+    "@hookform/resolvers": "^3.9.0",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "@mui/system": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "apexcharts": "^3.43.0",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
