feat: :sparkles: Correção de problemas de renderização, inclusão de configurações ligadas à API e atualização dos hooks

--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,7 @@
   "rules": {
     "no-alert": 0,
     "camelcase": 0,
-    "no-console": 0,
+    "no-console": 1,
     "no-param-reassign": 0,
     "naming-convention": 0,
     "default-param-last": 0,
@@ -53,6 +53,7 @@
     "no-restricted-exports": 0,
     "react/no-children-prop": 0,
     "react/forbid-prop-types": 0,
+    "react/prop-types": 0,
     "react/react-in-jsx-scope": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "react/no-array-index-key": 0,
@@ -61,6 +62,7 @@
     "react/jsx-filename-extension": 0,
     "react/jsx-props-no-spreading": 0,
     "import/prefer-default-export": 0,
+    "consistent-return": 0,
     "react/function-component-definition": 0,
     "jsx-a11y/control-has-associated-label": 0,
     "react/jsx-no-useless-fragment": [
