--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mui/system": "^5.16.7",
     "@reduxjs/toolkit": "^2.2.7",
     "apexcharts": "^3.43.0",
+    "axios": "^1.7.7",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
@@ -40,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.16.0",
     "simplebar-react": "^3.2.4",
     "yup": "^1.4.0"
