--- a/package.json
+++ b/package.json
@@ -23,11 +23,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.1.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/timeline": "^6.1.15",
     "@hookform/resolvers": "^3.9.0",
     "@iconify/react": "^4.1.1",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "@mui/system": "^5.16.7",
+    "@mui/x-date-pickers": "^7.24.1",
     "@reduxjs/toolkit": "^2.2.7",
     "apexcharts": "^3.43.0",
     "axios": "^1.7.7",
