--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fullcalendar/timeline": "^6.1.15",
     "@hookform/resolvers": "^3.9.0",
     "@iconify/react": "^4.1.1",
+    "@mui/icons-material": "^6.4.6",
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "@mui/system": "^5.16.7",
